# halo2-examples

./: Cargo.toml  README.md
gadget/IsZero/: Cargo.toml
gadget/IsZero/src/: is_zero.rs
simple_example/: Cargo.toml
simple_example/src/: main.rs
src/: example_iszero.rs  lib.rs
src/arithmetic/: example1.rs  example2.rs  example3.rs
src/fibonacci/: example1.rs  example2.rs  example3.rs  example4.rs
src/range_check/: example1.rs
